--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,8 +1,10 @@
 ---
 layout: archive
 title: "Research"
-permalink: /portfolio/
+permalink: /research/
 author_profile: true
+redirect_from:
+  - /portfolio/
 ---
 
 {% include base_path %}
